Optimize loading of photoswipe.css

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,7 +52,7 @@
 <link href="/assets/css/minimal.css" rel="stylesheet" media="all" class="default" />
 {%- else -%}
 <link href="/assets/css/site.css" rel="stylesheet" media="all" class="default" />
-<link href="/assets/css/photoswipe.css" rel="stylesheet" media="all" class="default" />
+<link href="/assets/css/photoswipe.css" rel="stylesheet" media="all" class="default" fetchpriority="low" />
 {%- endif -%}
 <!--[if IE]>
     <link href="/assets/css/ie-target.css" rel="stylesheet" type="text/css"/>
