--- a/_includes/Footer.html
+++ b/_includes/Footer.html
@@ -36,7 +36,7 @@
     <button>Close</button>
   </form>
 </dialog>
-<footer class="footer print-hidden">
+<footer id="footer" class="footer print-hidden">
         <div class="titles">
           <a class="site-title" href="{{ site.url }}">{{site.title}}</a>
           <p class="site-subtitle">{{ site.description }}</p>
