--- a/_includes/Footer.html
+++ b/_includes/Footer.html
@@ -93,6 +93,7 @@
 <script async src="/assets/js/lazyload.min.js"></script>
 <script async src="/assets/js/hotkeys.min.js"></script>
 <script data-goatcounter="https://joshbeckman.goatcounter.com/count" async src="https://gc.zgo.at/count.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/welpo/iine@main/iine.mini.js"></script>
 <script>
 (function figurePadding() {
         document.addEventListener('DOMContentLoaded', function() {
