--- a/_includes/Social.html
+++ b/_includes/Social.html
@@ -26,8 +26,8 @@
       </ul>
       <form class="iine-like-button" action="https://vhiweeypifbwacashxjz.supabase.co/rest/v1/rpc/increment_hits?apikey=sb_publishable_EoB7MFJhCmb6PiAk-GPJ4w_PGhQ44Ru" method="post">
         <input type="hidden" name="page_slug" value="{{ page.url }}">
-        <button type="submit" class="iine-button" data-icon="❤️" aria-hidden="true">
-          <noscript>❤️</noscript>
+        <button type="submit" class="iine-button" data-icon="heart" aria-hidden="true">
+          <noscript>♥</noscript>
         </button>
       </form>
     </div>
