--- a/_includes/Footer.html
+++ b/_includes/Footer.html
@@ -93,7 +93,8 @@
 <script async src="/assets/js/lazyload.min.js"></script>
 <script async src="/assets/js/hotkeys.min.js"></script>
 <script data-goatcounter="https://joshbeckman.goatcounter.com/count" async src="https://gc.zgo.at/count.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/welpo/iine@main/iine.mini.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js" async></script>
+<script src="https://cdn.jsdelivr.net/gh/welpo/iine@main/iine.mini.js" async></script>
 <script>
 (function figurePadding() {
         document.addEventListener('DOMContentLoaded', function() {
@@ -423,11 +424,6 @@ window.addEventListener('load', function () {
             statusLink.textContent = 'Status Unavailable';
         });
   }
-})();
-(function preloadQRCode() {
-    var script = document.createElement('script');
-    script.src = 'https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js';
-    document.body.appendChild(script);
 })();
 window.addEventListener('beforeprint', function() {
     // Skip if footnotes already generated or QRCode not loaded
